--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,6 +16,28 @@ body {
     position: relative;
 }
 
+:root {
+    --font-text: font-family: -apple-system,
+        system-ui,
+        system-ui,
+        "Segoe UI",
+        Roboto,
+        "Helvetica Neue",
+        "Fira Sans",
+        Ubuntu,
+        Oxygen,
+        "Oxygen Sans",
+        Cantarell,
+        "Droid Sans",
+        "Apple Color Emoji",
+        "Segoe UI Emoji",
+        "Segoe UI Symbol",
+        "Lucida Grande",
+        Helvetica,
+        Arial,
+        sans-serif;
+}
+
 #header>#content_header {
     position: fixed;
     top: 0;
@@ -224,30 +246,100 @@ select {
 }
 
 .search-btn .btn {
-    font-family: -apple-system,
-        system-ui,
-        system-ui,
-        "Segoe UI",
-        Roboto,
-        "Helvetica Neue",
-        "Fira Sans",
-        Ubuntu,
-        Oxygen,
-        "Oxygen Sans",
-        Cantarell,
-        "Droid Sans",
-        "Apple Color Emoji",
-        "Segoe UI Emoji",
-        "Segoe UI Symbol",
-        "Lucida Grande",
-        Helvetica,
-        Arial,
-        sans-serif;
+    font-family: var(--font-text);
     font-size: 18px;
     color: #EAEAEA;
-    padding: 15px 20px;
+    padding: 13px 25px;
     background-color: #FF4A52;
     border: 1px solid #363E52;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 40px;
+}
+
+#popular {
+    padding: 140px 0;
+    height: 1000px;
+
+}
+
+.title {
+    font-size: 40px;
+    font-family: var(--font-text);
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+
+.sub-title {
+    font-size: 20px;
+    color: #717171;
+}
+
+#popular>.popular-text {
+    text-align: center;
+}
+
+.popular-content {
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+    gap: 20px 1px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.popular-content .popular-item img {
+
+    width: 400px;
+    height: 300px;
+    box-shadow: rgb(146, 48, 48);
+    border-radius: 10px;
+}
+
+.popular-content .popular-item h3 {
+    position: relative;
+    color: #f2f2f2;
+    bottom: 35px;
+    right: 100px;
+    font-weight: 500;
+    font-size: 22px;
+    font-family: var(--font-text);
+}
+
+.popular-content .popular-item h3:hover {
+    color: #FF4A52;
+    bottom: 40px;
+    cursor: pointer;
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+}
+
+
+#content>#subcribe {
+    height: 150px;
+    background-image: url(/assets/img/subcribe.jpg);
+    text-align: center;
+}
+
+#subcribe .subcribe-text {
+
+    font-family: var(--font-text);
+    font-size: 24px;
+    color: #fff;
+    font-weight: 400;
+    margin-bottom: 40px;
+    margin-right: 30px;
+
+}
+
+#subcribe input {
+    height: 50px;
+    width: 200px;
+    border-radius: 5px;
+    background-color: 0;
+    border: 1px solid #717171;
 }
