--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,6 +26,7 @@ body {
     display: flex;
     justify-items: center;
     align-items: center;
+    box-shadow: 0px 1px 3px 0px rgb(168 191 199);
 }
 
 #content_header>.logo {
