--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -178,9 +178,50 @@ body {
     height: 28vw;
 }
 
+.out-story {
+    background: #eaeaea00;
+    padding-top: 10px;
+}
+
 .out-story-container {
     width: 75%;
     margin: 0 auto;
+    margin-top: 8%;
+}
+
+.out-story-container .container-img {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #ccc;
+}
+
+.out-story-container div {
+    margin: 67px 0;
+}
+
+.out-story-container > div:first-child {
+    margin: 67px -100px;
+
+}
+
+.out-story-container .container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.out-story-container .counter h3{
+    font-size: 4em;
+    color: #ff4a52;
+    text-align: center;
+}
+
+.out-story-container .counter p {
+    color: #7a838b;
+    font-size: 19px;
+    font-weight: 500;
+    margin-top: 20px;
+    line-height: 28px;
+    text-align: center;
 }
 
 
