--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,7 @@ body {
 }
 
 #header>#content_header {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     right: 0;
     left: 0;
@@ -150,7 +150,6 @@ body {
 /* Slider */
 #slider {
     width: 100%;
-    height: calc(100/3 * 2%);
     position: relative;
 }
 
@@ -352,30 +351,6 @@ select {
 }
 
 
-#content>#subcribe {
-    height: 150px;
-    background-image: url(/assets/img/subcribe.jpg);
-    text-align: center;
-}
-
-#subcribe .subcribe-text {
-
-    font-family: var(--font-text);
-    font-size: 24px;
-    color: #fff;
-    font-weight: 400;
-    margin-bottom: 40px;
-    margin-right: 30px;
-
-}
-
-#subcribe input {
-    height: 50px;
-    width: 200px;
-    border-radius: 5px;
-    background-color: 0;
-    border: 1px solid #FF4A52;
-}
 
 .popular-content>.search-btn {
     grid-column-start: 2;
@@ -389,6 +364,7 @@ select {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 
 }
 
@@ -403,4 +379,117 @@ select {
     font-size: 100px;
     font-family: "Nothing You Could Do", cursive;
     text-decoration: none;
+}
+
+#icon {
+    margin: 30px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+}
+
+#icon h3 {
+    font-size: 30px;
+    font-weight: 400;
+    font-family: "Rubik", sans-serif;
+}
+
+#icon span {
+    font-size: 17px;
+    color: rgb(145, 142, 142);
+    font-family: "Rubik", sans-serif;
+}
+
+/* footer */
+#footer {
+    margin-top: 45px;
+    height: 450px;
+    padding: 120px 0;
+    background-color: #040E27;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer>.contact-img {
+    margin-right: 20px;
+}
+
+#footer>.contact-item,
+.contact-popular {
+    list-style-type: none;
+    color: #bbb;
+    margin: 0 30px;
+}
+
+#footer>.contact-item li {
+    display: inline-block;
+}
+
+#footer>.contact-item a {
+    margin: 5px;
+    text-decoration: none;
+    color: #bbb;
+}
+
+#footer>.contact-item li:hover a {
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+    color: #FF4A52;
+}
+
+#footer>.contact-popular {
+    display: block;
+}
+
+#footer>.contact-popular li {
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 10px;
+}
+
+#footer>.contact-popular a {
+
+    text-decoration: none;
+    color: #bbb;
+}
+
+#footer>.contact-popular li:hover a {
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
+    transition: all 400ms ease;
+    color: #FF4A52;
+}
+
+.contact-popular-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.contact-insta-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px
+}
+
+.contact-popular h3 {
+    font-family: var(--font-text);
+    font-weight: 400;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.contact-insta img {
+    border-radius: 5px;
+    width: 75px;
+    height: 75px;
 }
