--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -8,6 +8,7 @@
 * {
     margin: 0;
     font-family: "Rubik", sans-serif;
+    
 }
 
 /*  */
@@ -15,8 +16,9 @@
     margin-right: 0 !important;
 }
 
-.no-decor a{
+a{
     text-decoration: none;
+    color: #000;
 }
 
 .box-shadow {
@@ -37,12 +39,22 @@
 .banner {
     padding-top: 30px;
     height: 450px;
-    background-image: linear-gradient(rgb(137 136 136 / 48%),rgb(137 136 136 / 48%)), url(../img/background-blog.webp);
+    background-image: linear-gradient(rgb(67 67 67 / 48%),rgb(67 67 67 / 48%)), url(../img/blog-img/banner.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: 50% 35%;
     display: flex;
     flex-direction: column-reverse;
     position: relative;
+}
+
+.banner .headline h1 {
+    font-family: "Nothing You Could Do",sans-serif;
+    font-size: 150px;
+    text-transform: capitalize;
+    font-weight: 400;
+    line-height: .5;
+    color: #fff;
+    margin-bottom: 0;
 }
 
 .banner .container {
@@ -80,12 +92,13 @@
 .banner .slide-option p {
     width: 55px;
     height: 55px;
-    border: 5px solid #ccc;
-    border-left: 5px solid rgb(0, 0, 0); 
+    border: 5px solid #d1d1d1;
+    border-left: 5px solid rgb(30 198 182);
     border-radius: 50%;
     line-height: 55px;
     font-size: 24px;
     margin-right: 20px;
+    color: #d1d1d1;
 }
 
 .slider {
@@ -104,7 +117,7 @@
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 
@@ -151,20 +164,22 @@
     margin: 0 auto;
     width: 75%;
     display: flex;
-    padding: 100px 0
+    padding: 100px 0 130px 0;
     /* align-items: stretch; */
 }
 
 .main-content .container {
-    width: 72%;
+    width: 67.5%;
+    margin-right: 20px;
 }
 
 .main-content .sub-content {
-    width: 28%;
+    width: 32.5%;
+    
 }
 
 .main-content .category {
-    padding: 10px 0;
+    padding: 0px 0 97px 0;
 }
 
 .main-content .content-category {
@@ -175,8 +190,9 @@
 
 .main-content .container .nav-category {
     padding: 10px 0;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #f1f1f1;
 }
+
 .main-content .container .nav-category ul{
     display: flex;
     flex-wrap: wrap;
@@ -193,12 +209,37 @@
     line-height: 30px;
     display: block;
     padding: 2px 14px;
+    position: relative;
+    
 }
-.main-content .container .nav-category ul a.big {
+
+.main-content .container .nav-category ul a::after {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 1.5px;
+    display: block;
+    transition: all 0.3s ease;
+    bottom: -36%;
+}
+
+.main-content .container .nav-category ul a:hover:after {
+    width: calc(100% - 27px);
+    height: 1.5px;
+    background-color: #1ec6b6;
+}
+
+
+.main-content .container .nav-category ul .big {
     font-size: 24px;
-    margin-right: 300px;
+    margin-right: 64px;
     padding-left: 0;
 }
+
+.mg-54 {
+    margin-right: 54px !important;
+}
+
 
 /* set kich thuoc image */
 .main-content .category .image img {
@@ -207,7 +248,7 @@
 }
 
 .main-content .category .post-thumbnail img {
-    width: 395px;
+    width: 100%;
     height: 198px;
     object-fit: cover;
     object-position: 50% 50%;
@@ -220,7 +261,7 @@
 }
 
 .main-content .category .content-category .col {
-    width:48%;
+    width:47.8%;
     padding: 0 0 0 0;
     margin-right: 32px;
     /* height: 100%; */
@@ -250,6 +291,159 @@
     cursor: pointer;
 }
 
+/* Sub content */
+
+.sub-content {
+    box-sizing: border-box;
+    border-left: 2px solid #f1f1f1;
+    height: 100%
+}
+
+.sub-content .hollow {
+    width: 100%;
+    height: 54px;
+    border-bottom: 2px solid #f1f1f1;
+}
+
+.sub-content .search {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 28px 0 40px 0;  
+}
+
+
+.sub-content .input {
+    display: flex;
+    margin-bottom: 14px;
+}
+
+.sub-content .input input {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-right: 0;
+    width: 200px;
+    
+}
+
+.sub-content .input input[type="text"]:focus {
+    border: 1px solid #ccc;
+    outline: 0;
+    border-right: 0;
+}
+
+.sub-content .search-btn i::before {
+    content: "\e610";
+}
+
+.sub-content .search-btn  i {
+    font-size: 14px;
+    color: #999;
+}
+
+.sub-content .search-btn {
+    border: 1px solid #ccc;
+    border-left: 0;
+}
+
+.sub-content .search-btn button {
+    border: none;
+    padding: 10px;
+    background: transparent;
+}
+
+.sub-content .button button {
+    padding: 10px 107px;
+    background: #1ec6b6;
+    border: none;
+    padding: 11px 101px;
+    color: #ffffff;
+    font-size: 17px;
+}
+
+
+/* top stories */
+
+.sub-content .headline h3 {
+    padding: 20px 0px 20px 25px;
+    border: 2px solid #f1f1f1;
+    border-left: 0;
+    border-right: 0;
+}
+.sub-content .top-stories img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    object-position: 50% 50%;
+}
+
+.sub-content .top-stories .content {
+    padding: 25px 0 55px 25px;
+}
+
+.sub-content .top-stories .content > div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.sub-content .top-stories .content > div > div {
+    padding: 0 10px 0px 20px;
+}
+
+/* tag-clouds */
+
+.tag-clouds .content {
+    padding: 20px 0px 30px 30px;
+}
+
+.tag-clouds .content ul {
+    padding: 0;
+}
+
+.tag-clouds .content li {
+    display: inline-block;
+}
+
+.tag-clouds .content a{
+    display: inline-block;
+    border: 1px solid #eee;
+    background: #fff;
+    padding: 5px 20px;
+    margin-bottom: 8px;
+    margin-right: 3px;
+    transition: all .3s ease 0s;
+    color: #888;
+    font-size: 13px;
+}
+
+/* instagram feeds */
+
+.instagram .content {
+    padding: 20px 0 0 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.instagram .content div {
+    width: 105px;
+    height: 105px;
+    
+}
+
+.instagram .content a {
+    display: inline-block;
+}
+
+.instagram .content img {
+    width: 90px;
+    height: 90px;
+    border-radius: 10px;
+} 
+
+
 /*  Style phần top rate */
 
 .top-rate .container {
@@ -259,7 +453,7 @@
 
 .top-rate .headline {
     padding: 10px 0 10px 0px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #f1f1f1;
     margin-bottom: 30px;
 }
 
@@ -296,17 +490,22 @@
 }
 
 .top-rate .col .tr-content .tag a {
+    padding: 4px 14px 2px 14px;
     display: inline-block;
-    padding: 0 10px;
-    background-color: #ccc;
     height: 20px;
-
+    background-color: #1ec6b6;
+    text-transform: uppercase;
     font-size: 10px;
+    color: #fff;
+    font-weight: 500;
     line-height: 20px;
+    border-radius: 18px;
+    letter-spacing: 0.75px;
+    transition: all 400ms ease-in-out;
 }
 
 .top-rate .col .tr-content .tag a:hover {
-    background-color: #3a96f9c2;
+    background-color: #ff4a52;
     
 }
 
@@ -318,14 +517,14 @@
 /* Style phan cuoi */
 
 .lastest-content {
-    margin: 60px 0;
+    margin: 110px 0;
 }
 
 
 
 .lastest-content .headline {
     padding: 10px 0 10px 0px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #f1f1f1;
     margin-bottom: 30px;
 }
 
@@ -356,17 +555,84 @@
     height: 50%;
 }
 
-.lastest-content .most-popular-videos .row {
+.lastest-content .most-popular-videos .row {    
     display: block;
+    height: 418px;
+    margin-bottom: 10px;
 }
-
-
-
 
 .lastest-content .most-popular-videos img {
     width: 100%;
     height: 190px;
     object-fit: cover;
+}
+
+.most-popular-videos .image {
+    position: relative;
+}
+
+.most-popular-videos .tag a {
+    padding: 4px 14px 2px 14px;
+    display: inline-block;
+    height: 20px;
+    background-color: #1ec6b6;
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #fff;
+    font-weight: 500;
+    line-height: 20px;
+    border-radius: 18px;
+    letter-spacing: 0.75px;
+    position: absolute;
+    top: 14px;
+    left: 14px;
+    transition: all 400ms ease-in-out;
+}
+
+.most-popular-videos .tag a:hover {
+    background-color: #ff4a52;
+}
+
+.most-popular-videos .play a {
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    background-color: #ffffff;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    text-align: center;
+    transition: all 400ms ease-in-out;
+    color:rgb(147, 147, 147);
+    box-sizing: border-box;
+    padding: 0px 0 0 3px;
+}
+
+@keyframes wheel {
+    from {
+        transform: translate(-50%, -50%) rotate(0deg);
+    } to {
+        transform: translate(-50%, -50%) rotate(360deg);
+
+    }
+}
+.most-popular-videos .play a:hover {
+    color:rgb(0, 0, 0);
+    animation: wheel 1s linear infinite;
+}
+
+.most-popular-videos .play i {
+    line-height: 36px;
+}
+
+
+
+.most-popular-videos .play i::before {
+    content: "\f04b";
+    
 }
 
 /* Nút load more */
