--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -37,8 +37,7 @@ body {
         sans-serif;
 }
 
-<<<<<<< HEAD
-#main {}
+HEAD #main {}
 
 #header {
     height: 80px;
@@ -172,16 +171,17 @@ body {
 
 #header #content_header .search-icon .search {
     color: #f5d9d9;
-=======
+}
+
 h3 {
-    font-family: "Nothing You Could Do",sans-serif;
+    font-family: "Nothing You Could Do", sans-serif;
     font-size: 150px;
     text-transform: capitalize;
     font-weight: 400;
     line-height: .5;
     color: #fff;
     margin-bottom: 0;
->>>>>>> 21f596250abc91a694f6cd2651392635122b4fb3
+
 }
 
 .banner {
