--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -392,7 +392,7 @@ select {
     margin-top: 100px;
     width: 100%;
     height: 759px;
-    background-image: url(/assets/img/back_gr_video.jpg);
+    background-image: url(../assets/img/back_gr_video.jpg);
     display: flex;
     justify-content: center;
     align-items: center;
