--- a/assets/css/aboutcss.css
+++ b/assets/css/aboutcss.css
@@ -60,6 +60,7 @@
     object-position: 50% 50%;
     border-radius: 10px;
     animation:  imgtable 4000ms linear infinite;
+    box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 28%);
 }
 
 .img-table img:hover {
@@ -84,6 +85,7 @@
     border-radius: none;
     border: none;
     height: 680px;
+    
 }
 
 .content1 div {
@@ -106,6 +108,16 @@
     background-image: url(../img/people.jpg);
     background-position: 50% 50%;
     background-size: cover;
+    z-index: -1;
+}
+
+.content1 .img2:hover, .content1 .img3:hover, .content1 .img5:hover, .content1 .img4:hover {
+    border: 10px solid #1ec6b6;
+    z-index: 10;
+}
+
+.content1 .img1:hover {
+    background: #1ec6b6;
 }
 
 .content1 .img3 {
@@ -114,6 +126,7 @@
     margin: -24% 0 0px 5%;
     background-image: url(../img/beach.jpg);
     background-size: cover;
+    z-index: -1;
 }
 
 .content1 .img4 {
@@ -131,6 +144,7 @@
     margin: -2% 0 0 66%;
     background-image: url(../img/tree.jpg);
     background-size: cover;
+    z-index: -1;
 }
 
 .content1 .paragraph {
